--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,31 @@ target_include_directories(
 
 set(SHADER_DIR "${CMAKE_SOURCE_DIR}/shaders/")
 set(ASSETS_DIR "${CMAKE_SOURCE_DIR}/assets/")
+
 target_compile_definitions(
     ${PROJECT_NAME}
     PUBLIC
     SHADER_DIR="${SHADER_DIR}"
     ASSETS_DIR="${ASSETS_DIR}"
+)
+
+function(copy_directory TARGET_NAME SOURCE_DIR DEST_DIR)
+    add_custom_command(
+        TARGET ${TARGET_NAME}
+        PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E remove_directory ${DEST_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${SOURCE_DIR} ${DEST_DIR}
+    )
+endfunction()
+
+copy_directory(
+    ${PROJECT_NAME}
+    ${CMAKE_SOURCE_DIR}/assets/
+    ${CMAKE_BINARY_DIR}/assets/
+)
+
+copy_directory(
+    ${PROJECT_NAME}
+    ${CMAKE_SOURCE_DIR}/shaders/
+    ${CMAKE_BINARY_DIR}/shaders/
 )
