Load Texture data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,12 @@ endif()
 find_package(OpenGL REQUIRED)
 list(APPEND EXTERNAL_LIBS ${OpenGL_LIBRARIES})
 
-add_executable(${PROJECT_NAME} ${SOURCE} ${HEADERS} ${IMGUI_SOURCE} ${IMGUI_HEADERS} ${IMGUI_BACKEND_SOURCE} ${IMGUI_BACKEND_HEADERS})
+add_executable(
+    ${PROJECT_NAME}
+    ${SOURCE} ${HEADERS}
+    ${IMGUI_SOURCE} ${IMGUI_HEADERS}
+    ${IMGUI_BACKEND_SOURCE} ${IMGUI_BACKEND_HEADERS}
+)
 target_link_libraries(${PROJECT_NAME} PUBLIC ${EXTERNAL_LIBS})
 
 target_include_directories(
