Load Animation data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,13 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "bitset": "cpp",
+        "future": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
+        "resumable": "cpp",
+        "queue": "cpp",
+        "typeindex": "cpp"
     }
 }
